// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CalendarActivity render correctly 1`] = `
<dragger-stub
  class="dragger"
  left="0"
  style="height: 40px;"
  top="55.33333333333333"
>
  <div>
    <resizer-stub
      class="resizer"
      handlecolor="#cccfd9"
      height="40"
      minheight="20"
    >
      <calendar-event-stub
        color="#cccfd9"
        startedat="2019-01-01T01:23:45"
        stoppedat="2019-01-01T02:23:45"
        title="No Project"
      />
    </resizer-stub>
  </div>
</dragger-stub>
`;

exports[`CalendarActivity when project is defined render correctly 1`] = `
<dragger-stub
  class="dragger"
  left="0"
  style="height: 40px;"
  top="55.33333333333333"
>
  <div>
    <resizer-stub
      class="resizer"
      handlecolor="#ff0"
      height="40"
      minheight="20"
    >
      <calendar-event-stub
        color="#ff0"
        startedat="2019-01-01T01:23:45"
        stoppedat="2019-01-01T02:23:45"
        title="Development"
      />
    </resizer-stub>
  </div>
</dragger-stub>
`;
